[DDW-416] Fix z-index to keep staking slider in bg

--- a/source/renderer/app/components/notifications/ExperimentalDataOverlay.scss
+++ b/source/renderer/app/components/notifications/ExperimentalDataOverlay.scss
@@ -5,7 +5,7 @@
   height: 100%;
   position: absolute;
   width: 100%;
-  z-index: 3;
+  z-index: 11;
   @include overlay-backrop;
 
   .content {
